# tapeout-Voyager

./: .gitignore  .gitmodules  README.md
chipyard/: README.md
chipyard/scripts/: sync_design.sh
documents/: NPU-README.md  firesim-README.md  firesim-tutorial.md
generators/boom/src/main/scala/common/: parameters.scala
generators/boom/src/main/scala/exu/: core.scala
generators/boom/src/main/scala/ifu/: frontend.scala
generators/boom/src/main/scala/lsu/: dcache.scala
generators/chipyard/src/main/scala/: GemminiSoCConfigs.scala
generators/chipyard/src/main/scala/config/: GemminiSoCConfigs.scala  HeteroConfigs.scala
generators/chipyard/src/main/scala/config/fragments/: PeripheralFragments.scala  RoCCFragments.scala
generators/firechip/src/main/scala/: TargetConfigs.scala
generators/gemmini/src/main/scala/gemmini/: CmdFSM.scala  Configs.scala  ConfigsFP.scala  Controller.scala  CounterFile.scala  CustomConfigs.scala  DSEConfigs.scala  ExecuteController.scala  GemminiISA.scala  InstructionCompression.scala  LoopConv.scala  LoopMatmul.scala  LoopUnroller.scala  ReservationStation.scala  TilerFSM.scala  TilerScheduler.scala
generators/rocket-chip/src/main/scala/npu/: CSRNpu.scala  CoreNpu.scala  LazyRoCCNpu.scala  RocketCoreNpu.scala  RocketTileNpu.scala
generators/rocket-chip/src/main/scala/subsystem/: Configs.scala  RocketSubsystem.scala
generators/rocket-chip/src/main/scala/tile/: BaseTile.scala
scripts/: build-setup.sh  build-toolchain-extra.sh  init-submodules.sh  repo-clean.sh  sync_design.sh
software/: .gitignore  CMakeLists.txt
software/scripts/: build-verilator.sh  run-verilator.sh  sync_design.sh
software/src/: CMakeLists.txt
software/src/cpu/: CMakeLists.txt  Makefile
software/src/cpu/spmm/: spmm.c
software/src/npu/: CMakeLists.txt  Makefile
software/src/npu/buddy/: CMakeLists.txt
software/src/npu/buddy/spmm/: spmm  spmm.cpp  v_isa.cpp
software/src/npu/buddy/spmm/include/: matrix_para.h  v_isa.h
software/src/npu/native/: CMakeLists.txt
software/src/npu/native-test/: template.c
software/src/npu/native-test/gemmini-rocc-tests/bareMetalC/: Makefile  matmul_os.c  mytest.c  tiled_matmul_os.c
software/src/npu/native-test/gemmini-rocc-tests/include/: gemmini.h
software/src/npu/native-test/gemmini-rocc-tests/mlps/: parameters8.h  test8.c
software/src/npu/native/gemmini-rocc-tests/bareMetalC/: tiled_matmul_ws.c  vector.c
software/src/npu/native/gemmini-rocc-tests/include/: gemmini_testutils.h
software/src/npu/native/gemmini-rocc-tests/mlps/: gemmini_matmul_generator.ipynb
software/src/npu/native/libgemmini/: .gitignore  Makefile  gemmini.h
