# cmake_minimum_required(VERSION 3.12)

# set(EXECUTABLE_OUTPUT_PATH "${BUILD_ROOT}/cpu")

# add_compile_options(${COMMON_CFLAGS})

# add_executable(hello-bin
#     hello/hello.c
# )

# add_executable(spmm-bin
#     spmm/spmm.c
# )

# set_target_properties(hello-bin spmm-bin 
#     PROPERTIES
#     LINK_FLAGS "-static"
# )
